<?xml version="1.0"?>
<package format="2">
  <name>inorbit_republisher</name>
  <version>0.2.1</version>
  <description>ROS to InOrbit topic republisher</description>
  <maintainer email="support@inorbit.ai">InOrbit</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>python3-yaml</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>python3-yaml</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
</package>
