<?xml version="1.0"?>
<package format="3">
  <name>inorbit_republisher</name>
  <version>0.2.4</version>
  <description>ROS to InOrbit topic republisher</description>
  <maintainer email="support@inorbit.ai">InOrbit</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 2">python-yaml</depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 3">python3-yaml</depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend condition="$ROS_PYTHON_VERSION == 2">python-yaml</depend>
  <build_export_depend condition="$ROS_PYTHON_VERSION == 3">python3-yaml</depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-yaml</depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-yaml</depend>
</package>
