<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>inorbit_republisher</name>
  <version>0.4.1</version>
  <description>ROS2 to InOrbit topic republisher</description>
  <maintainer email="support@inorbit.ai">InOrbit</maintainer>
  <license>MIT</license>
  <exec_depend>ros2launch</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
